@@ -281,6 +281,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
+       Canon MP250 series  (EXPERIMENTAL)
+       Canon PIXMA MP250   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP252   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP258   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP259   (EXPERIMENTAL)(*2)
+
        Canon MP260 series  (EXPERIMENTAL)
        Canon PIXMA MP260   (EXPERIMENTAL)(*2)
        Canon PIXMA MP268   (EXPERIMENTAL)(*2)
